Add endpoint get all student
