# src/main/java/com/maven/student/domain/services/StudentUseCaseImpl.java
@@ -28,6 +28,15 @@ public class StudentUseCaseImpl implements StudentUseCase {
     private final StudentRepositoryReactive repositoryReactive;
     private final StudentMapper studentMapper;
 
+
+    @Override
+    public Flux<ResponseStudentDto> getAllStudents() {
+        log.info("Start execute method getAllStudents");
+        return repositoryReactive.findAll()
+                .map(studentMapper::studentToResponse)
+                .doOnTerminate(() -> log.info("Finished execute method getAllStudents"));
+    }
+
     @Override
     public Flux<ResponseStudentDto> getAllStudentsActives() {
         log.info("Start execute method getAllStudentsActives");
