# src/main/resources/openapi.yaml
@@ -15,9 +15,9 @@ paths:
     get:
       tags:
         - student
-      summary: Get all student actives.
-      description: Get all student status actives.
-      operationId: getAllStudentsActives
+      summary: Get all student.
+      description: Get all student status.
+      operationId: getAllStudents
       responses:
         '200':
           description: successful operation
@@ -58,6 +58,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseStudentDto'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /students/actives:
+    get:
+      tags:
+        - student
+      summary: Get all student actives.
+      description: Get all student status actives.
+      operationId: getAllStudentsActives
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ResponseStudentDto'
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
         default:
           description: Unexpected error
           content:
